Basic function realization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,12 @@ find_package(OpenCV REQUIRED)
 #Boost
 set(Boost_ROOT "D:/boost/msvc_bin_complete/lib")
 find_package(Boost REQUIRED)
+include_directories("D:/boost/msvc_bin/include/boost-1_84")
 
 add_executable(boost-mjpeg-streamer
         main.cpp
-        main.cpp
+        http_server.h
+        http_server.cpp
 )
 
 target_link_libraries(boost-mjpeg-streamer ${OpenCV_LIBS})
